// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepHeader > should render 1`] = `
<DocumentFragment>
  <div
    class="w-full sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="text-theme-secondary-text mx-auto mb-2 inline-block font-semibold sm:hidden"
      >
        title
      </span>
      <ul
        class="flex flex-row gap-2"
      >
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="bg-theme-background flex items-end justify-between mt-8 hidden sm:block"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="text-theme-secondary-text flex items-center text-sm leading-6 md:text-base md:leading-6"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render simple header without a provider 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-background flex items-end justify-between"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          title
        </h1>
      </div>
      <div
        class="text-theme-secondary-text flex items-center text-sm leading-6 md:text-base md:leading-6"
        data-testid="header__subtitle"
      >
        subtitle
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render with extra 1`] = `
<DocumentFragment>
  <div
    class="w-full sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="text-theme-secondary-text mx-auto mb-2 inline-block font-semibold sm:hidden"
      >
        title
      </span>
      <ul
        class="flex flex-row gap-2"
      >
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="bg-theme-background flex items-end justify-between mt-8 hidden sm:block"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="text-theme-secondary-text flex items-center text-sm leading-6 md:text-base md:leading-6"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
      <div
        class="mt-8 sm:mt-0"
      >
        extra
      </div>
    </div>
  </div>
</DocumentFragment>
`;
